RESOLVED FIXED285911
[GStreamer] Fix WebCore log identifier reporting
https://bugs.webkit.org/show_bug.cgi?id=285911
Summary [GStreamer] Fix WebCore log identifier reporting
Philippe Normand
Reported 2025-01-14 07:06:41 PST
.
Attachments
Philippe Normand
Comment 1 2025-01-14 07:11:18 PST
EWS
Comment 2 2025-01-15 01:13:00 PST
Committed 288921@main (c7f90213eec5): <https://commits.webkit.org/288921@main> Reviewed commits have been landed. Closing PR #38993 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-15 01:13:14 PST
Note You need to log in before you can comment on or make changes to this bug.