[GStreamer] Fix WebCore log identifier reporting https://bugs.webkit.org/show_bug.cgi?id=285911

Reviewed by Xabier Rodriguez-Calvar.

The logIdentifier() returns an uint64_t value but what we want is actually the objectIdentifier, the
same one used in Logger::LogSiteIdentifier::toString(). The latter can't be reused because it
generates a string with additional fields (method name and potentially class name).

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:
(WebCore::GStreamerPeerConnectionBackend::GStreamerPeerConnectionBackend):
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):

Canonical link: https://commits.webkit.org/288921@main